errors/examples/typo.js
const firstName = "Craig";
console.log("Hello, " + fristName);